# hexapod

./: .gitignore  CMakeLists.txt  README.md  build.sh  hexapod.sublime-project
src/: field.cpp  field.hpp  hexapod.cpp  hexapod.hpp  main.cpp  paw.cpp  paw.hpp  servo.cpp  servo.hpp  spectator.cpp  spectator.hpp  vector.cpp  vector.hpp  vertex.cpp  vertex.hpp
